# grr

./: Cargo.toml
src/: background.rs  bar.rs  main.rs
src/services/: config.rs  dbus.rs  mod.rs  niri.rs  notifications.rs  search_provider.rs
src/style/: bar.css  launcher.css
src/widgets/: center_widget.rs  launcher.rs  mod.rs  notification.rs  start_widget.rs
