[package]
name = "grr"
version = "0.1.0"
edition = "2024"

[dependencies]
confy = "2.0.0"
gtk4 = {version= "0.11.3", features = ["v4_8", "v4_10"]}
gtk4-layer-shell = "0.8.0"
time-format = "1.2.2"
niri-ipc = "26.4.0"
async-channel = "2.5.0"
zbus = "5.16.0"
toml_edit = "0.25.13"

[dependencies.adw]
package = "libadwaita"
version = "0.9.1"
